--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Mees <m.brinkhuis@student.tudelft.nl>",
   "private": true,
   "config": {
-   "nuxt": {
-     "host": "192.168.178.19",
-     "port": "3000"
-   }
+    "nuxt": {
+      "host": "192.168.178.19",
+      "port": "3000"
+    }
   },
   "scripts": {
     "dev": "nuxt",
@@ -19,7 +19,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "bulma": "^0.7.1",
+    "node-sass": "^4.9.0",
+    "nuxt": "^1.0.0",
+    "sass-loader": "^7.0.1",
+    "vue-carousel": "^0.7.3",
+    "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
