--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
+  "config": {
+   "nuxt": {
+     "host": "192.168.178.19",
+     "port": "3000"
+   }
+  },
   "dependencies": {
     "bulma": "^0.7.1",
     "node-sass": "^4.9.0",
+    "nodejs": "0.0.0",
+    "npm": "^6.1.0",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-carousel": "^0.7.3",
+    "vue-mq": "^0.2.1",
     "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
