--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-carousel": "^0.7.3",
+    "vue-cookie": "^1.1.4",
     "vue-mq": "^0.2.1",
     "vue-smooth-scroll": "^1.0.13"
   },
