--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bulma": "^0.7.1",
+    "fitty": "^2.2.5",
     "node-sass": "^4.9.0",
     "nodejs": "0.0.0",
     "npm": "^6.1.0",
