--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0"
+    }
+  },
   "dependencies": {
     "bulma": "^0.7.1",
     "node-sass": "^4.9.0",
