--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^8.0.0",
     "vue-carousel": "^0.7.3",
     "vue-cookie": "^1.1.4",
+    "vue-mobile-detection": "^1.0.0",
     "vue-mq": "^0.2.1",
     "vue-smooth-scroll": "^1.0.13"
   },
