--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bulma": "^0.7.5",
     "nodejs": "0.0.0",
     "npm": "^6.14.6",
-    "nuxt": "2.13.0",
+    "nuxt": "^2.13.0",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.0",
     "vue-carousel": "^0.7.3",
