--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unhead/vue": "^1.1.32",
     "bulma": "^0.9.4",
     "cookie-universal-nuxt": "^2.2.2",
+    "fitty": "^2.3.7",
     "nodejs": "0.0.0",
     "npm": "^8.13.1",
     "nuxt": "^3.6.5",
